Bug 330936 - Crash when opening a Flickr photostream
Summary: Crash when opening a Flickr photostream
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.12.2
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords: drkonqi
: 330393 331154 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-08 21:10 UTC by Maarten ter Huurne
Modified: 2014-03-18 06:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maarten ter Huurne 2014-02-08 21:10:58 UTC
Application: konqueror (4.12.1)
KDE Platform Version: 4.12.1
Qt Version: 4.8.5
Operating System: Linux 3.11.6-4-desktop x86_64
Distribution (Platform): openSUSE RPMs

-- Information about the crash:
- What I was doing when the application crashed:

I clicked a hyperlink in a discussion in Konversation. Konqueror crashed before or immediately after showing the page, in any case I didn't get a look at the page itself. I tried the link multiple times and Konqueror crashed 2 out of 3 times. The same page loads fine in Rekonq in the same KDE session.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Konqueror (konqueror), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[KCrash Handler]
#5  ref (this=0x18) at /usr/src/debug/kdelibs-4.12.1/khtml/misc/shared.h:66
#6  DOM::NodeImpl::dispatchGenericEvent (this=this@entry=0x5ed5cb0, evt=evt@entry=0x22fb350) at /usr/src/debug/kdelibs-4.12.1/khtml/xml/dom_nodeimpl.cpp:504
#7  0x00007f5e008b9e31 in DOM::NodeImpl::dispatchWindowEvent (this=0x5ed5cb0, evt=0x22fb350) at /usr/src/debug/kdelibs-4.12.1/khtml/xml/dom_nodeimpl.cpp:542
#8  0x00007f5e008b9ef7 in DOM::NodeImpl::dispatchWindowEvent (this=<optimized out>, _id=_id@entry=26, canBubbleArg=canBubbleArg@entry=false, cancelableArg=cancelableArg@entry=false) at /usr/src/debug/kdelibs-4.12.1/khtml/xml/dom_nodeimpl.cpp:530
#9  0x00007f5e00932dca in DOM::HTMLPartContainerElementImpl::event (this=<optimized out>, e=0x3f3c4d0) at /usr/src/debug/kdelibs-4.12.1/khtml/html/html_objectimpl.cpp:149
#10 0x00007f5e11cc08ac in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#11 0x00007f5e11cc6e70 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#12 0x00007f5e129d738a in KApplication::notify (this=0x7fffbbc242f0, receiver=0x5ed5ca0, event=0x3f3c4d0) at /usr/src/debug/kdelibs-4.12.1/kdeui/kernel/kapplication.cpp:311
#13 0x00007f5e112b20ad in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#14 0x00007f5e112b50ff in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/libQtCore.so.4
#15 0x00007f5e112df493 in ?? () from /usr/lib64/libQtCore.so.4
#16 0x00007f5e0d3ca316 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#17 0x00007f5e0d3ca668 in ?? () from /usr/lib64/libglib-2.0.so.0
#18 0x00007f5e0d3ca70c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#19 0x00007f5e112ded55 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#20 0x00007f5e11d5d936 in ?? () from /usr/lib64/libQtGui.so.4
#21 0x00007f5e112b0d0f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#22 0x00007f5e112b1005 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#23 0x00007f5e112b613b in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#24 0x00007f5e14a4417e in kdemain () from /usr/lib64/libkdeinit4_konqueror.so
#25 0x00007f5e14602be5 in __libc_start_main () from /lib64/libc.so.6
#26 0x0000000000400761 in _start ()

Possible duplicates by query: bug 315924.

Reported using DrKonqi
Comment 1 Andrea Iacovitti 2014-02-08 21:32:02 UTC
*** Bug 330393 has been marked as a duplicate of this bug. ***
Comment 2 Andrea Iacovitti 2014-02-15 18:06:08 UTC
*** Bug 331154 has been marked as a duplicate of this bug. ***
Comment 3 Andrea Iacovitti 2014-03-15 07:21:39 UTC
Git commit 6d3c560b56213258d836f9e097ca185fc56a5eff by Andrea Iacovitti.
Committed on 15/03/2014 at 07:18.
Pushed by aiacovitti into branch 'KDE/4.12'.

Refcount this node during event handling code to avoid early document deletion.
FIXED-IN: 4.12.4

M  +11   -21   khtml/xml/dom_nodeimpl.cpp

http://commits.kde.org/kdelibs/6d3c560b56213258d836f9e097ca185fc56a5eff
Comment 4 Andrea Iacovitti 2014-03-15 14:04:17 UTC
Git commit 024ec29d42d9c3514b271d66511dc1f9ae7f1dfc by Andrea Iacovitti.
Committed on 15/03/2014 at 14:02.
Pushed by aiacovitti into branch 'KDE/4.12'.

Unintentionally removed in latest commit.

M  +2    -0    khtml/xml/dom_nodeimpl.cpp

http://commits.kde.org/kdelibs/024ec29d42d9c3514b271d66511dc1f9ae7f1dfc
Comment 5 Andrea Iacovitti 2014-03-18 06:17:54 UTC
Git commit 1c525234a18bdf730afec825c592e2cc84fc3cca by Andrea Iacovitti.
Committed on 18/03/2014 at 06:15.
Pushed by aiacovitti into branch 'master'.

Refcount this node during event handling code to avoid early document deletion.
FIXED-IN: 4.12.4

(forwardport kdelibs commits 6d3c560 024ec29)

M  +11   -19   src/xml/dom_nodeimpl.cpp

http://commits.kde.org/khtml/1c525234a18bdf730afec825c592e2cc84fc3cca