Refcount this node during event handling code to avoid early document deletion.

BUG: 330936
FIXED-IN: 4.12.4

(forwardport kdelibs commits 6d3c560 024ec29)